Added translation. Changed Footer year.

--- a/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-29 17:54+0200\n"
-"PO-Revision-Date: 2013-03-29 21:58+0200\n"
+"PO-Revision-Date: 2013-03-30 19:17+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -3801,18 +3801,18 @@ msgid "Selected filters:"
 msgstr "Ausgewählte Suchoptionen:"
 
 #: ../code/application/views/city_view.php:346
-#, fuzzy
 msgid "Please Wait"
-msgstr "Bitte wählen Sie."
+msgstr "Bitte warten"
 
 #: ../code/application/views/city_view.php:351
 msgid "From"
 msgstr "Von"
 
 #: ../code/application/views/city_view.php:352
-#, fuzzy
 msgid "Only 5 properties can be compared. Please remove a property from list."
-msgstr "Bitte eine Immobilie von der Liste entfernen"
+msgstr ""
+"Nur 5 Immobilien können verglichen werden. Bitte eine Immobilie von der "
+"Liste entfernen."
 
 #: ../code/application/views/hw/hostel_view.php:3
 #: ../code/application/views/hb/hostel_view.php:2
