--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -1085,16 +1085,16 @@ msgid ""
 "simplicité, nous proposons également des informations de dernières minutes, "
 "des guides et commentaires."
 msgstr ""
-"<strong>© 1997 - 2012 AubergesDeJeunesse.com ® | Site Officiel | Tous droits "
+"<strong>© 1997 - 2013 AubergesDeJeunesse.com ® | Site Officiel | Tous droits "
 "réservés | 3 Villa Fleurie, 75019 Paris, France. </strong>  %s est le site "
 "en ligne n°1 en France, Belgique, Suisse et Canada pour tous les logements "
 "en auberges de jeunesse à bas prix dernière minute. %s propose la "
 "réservation dernière minute de chambres en auberges de jeunesse et logements "
 "à bas prix dans des villes comme Paris en France, Londres en Angleterre, "
 "Barcelone en Espagne, New York aux Etats-Unis, Rome en Italie, Amsterdam en "
-"Hollande, Dublin en Irlande, Madrid en Espagne, Prague en République "
-"tchèque ... Préparez votre voyage en toute simplicité, nous proposons "
-"également des informations de dernières minutes, des guides et commentaires."
+"Hollande, Dublin en Irlande, Madrid en Espagne, Prague en République tchèque "
+"… Préparez votre voyage en toute simplicité, nous proposons également des "
+"informations de dernières minutes, des guides et commentaires."
 
 #: ../code/application/views/includes/footer.php:105
 msgid "Hostelworld customer review"
