--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-29 17:54+0200\n"
-"PO-Revision-Date: 2013-03-29 21:31+0200\n"
+"PO-Revision-Date: 2013-03-30 19:10+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -1199,7 +1199,7 @@ msgstr "Térképek alapvetőek és nagyon praktikusak."
 #: ../code/application/views/helpfile/pofields.php:668
 #, php-format
 msgid "Your message has been sent to %s"
-msgstr "Az üzenet a %s elküldve"
+msgstr "Az üzenet a %s -re elküldve"
 
 #: ../code/application/views/includes/template-share-email-popup.php:17
 #: ../code/application/views/helpfile/pofields.php:669
@@ -3750,18 +3750,18 @@ msgid "Selected filters:"
 msgstr "Megadott keresési feltételek:"
 
 #: ../code/application/views/city_view.php:346
-#, fuzzy
 msgid "Please Wait"
-msgstr "Kérjük válasszon "
+msgstr "Kérem , várjon"
 
 #: ../code/application/views/city_view.php:351
 msgid "From"
 msgstr "Feladó"
 
 #: ../code/application/views/city_view.php:352
-#, fuzzy
 msgid "Only 5 properties can be compared. Please remove a property from list."
-msgstr "Kérem, töröljön egy ingatlant a listából."
+msgstr ""
+"Csak 5 ingatlan összehasonlítása lehetséges. Kérem, töröljön egy ingatlant a "
+"listából."
 
 #: ../code/application/views/hw/hostel_view.php:3
 #: ../code/application/views/hb/hostel_view.php:2
