--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-29 17:54+0200\n"
-"PO-Revision-Date: 2013-03-30 00:21+0200\n"
+"PO-Revision-Date: 2013-03-30 19:30+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -3819,14 +3819,14 @@ msgid "Please Wait"
 msgstr "Attendere Prego"
 
 #: ../code/application/views/city_view.php:351
-#, fuzzy
 msgid "From"
-msgstr "Da:"
+msgstr "Da"
 
 #: ../code/application/views/city_view.php:352
-#, fuzzy
 msgid "Only 5 properties can be compared. Please remove a property from list."
-msgstr "Per favore rimuovere una proprietà dalla lista."
+msgstr ""
+"Solamente 5 proprietà possono essere comparate. Per favore rimuovere una "
+"proprietà dalla lista."
 
 #: ../code/application/views/hw/hostel_view.php:3
 #: ../code/application/views/hb/hostel_view.php:2
@@ -7632,7 +7632,7 @@ msgstr "ultime %d"
 
 #: ../code/application/views/helpfile/pofields.php:693
 #: ../code/application/views/mustache/property_list.php:107
-#, fuzzy, php-format
+#, php-format
 msgid "Quick View"
 msgstr "Panoramica veloce"
 
