--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-29 17:54+0200\n"
-"PO-Revision-Date: 2013-03-29 22:21+0200\n"
+"PO-Revision-Date: 2013-03-30 19:29+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -3712,18 +3712,16 @@ msgid "Selected filters:"
 msgstr "검색어 다시 지정하기"
 
 #: ../code/application/views/city_view.php:346
-#, fuzzy
 msgid "Please Wait"
-msgstr "기다려 주세요…"
+msgstr "기다려 주세요"
 
 #: ../code/application/views/city_view.php:351
 msgid "From"
 msgstr "발신자"
 
 #: ../code/application/views/city_view.php:352
-#, fuzzy
 msgid "Only 5 properties can be compared. Please remove a property from list."
-msgstr "목록에서 숙소를 제거하십시오."
+msgstr "5개 숙소만 비교할 수 있습니다. 목록에서 숙소를 제거하십시오."
 
 #: ../code/application/views/hw/hostel_view.php:3
 #: ../code/application/views/hb/hostel_view.php:2
