--- a/languages/wp/en_US_nf.po
+++ b/languages/wp/en_US_nf.po
@@ -468,13 +468,13 @@ msgid ""
 "tchèque ….Préparez votre voyage en toute simplicité, nous proposons "
 "également des informations de dernières minutes, des guides et commentaires."
 msgstr ""
-"<strong>© 1997 - 2012 NoFeesHostels.com - All rights reserved - Office 404, "
+"<strong>© 1997 - 2013 NoFeesHostels.com - All rights reserved - Office 404, "
 "4th Floor, Albany House, 324/326 Regent Street - London- W1B 3HH - UK.     </"
 "strong>     Official hostel booking engine in the USA, Ireland, England, "
 "Scotland and Wales.NoFeesHostels.com offers last minute booking of hostel "
 "rooms and low-cost housing in cities like Paris, France; London, England; "
 "Barcelona, Spain; New York, USA; Rome, Italy; Amsterdam in the Netherlands; "
-"Dublin, Ireland; Madrid, Spain and Prague in the Czech Republic ...We also "
+"Dublin, Ireland; Madrid, Spain and Prague in the Czech Republic …We also "
 "provide last minute information, guides and reviews for your perfect hostel."
 
 #: functions.php:103
