--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-29 17:54+0200\n"
-"PO-Revision-Date: 2013-03-29 21:23+0200\n"
+"PO-Revision-Date: 2013-03-30 21:09+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1086,7 +1086,7 @@ msgid ""
 "simplicité, nous proposons également des informations de dernières minutes, "
 "des guides et commentaires."
 msgstr ""
-"<strong>© 1997 - 2012 - Hostales.com - Derechos Reservados - Rambla de "
+"<strong>© 1997 - 2013 - Hostales.com - Derechos Reservados - Rambla de "
 "Catalunya, 38, 8ª planta - 08007 Barcelona - España. </strong>%s es el "
 "portal de Internet N º 1 en España, Perú, Argentina, Chile, Brasil, Ecuador, "
 "Venezuela, Panama, Mejico, Bolivia, Paraguay y todos los paises hispánicos "
@@ -3807,9 +3807,10 @@ msgid "From"
 msgstr "De"
 
 #: ../code/application/views/city_view.php:352
-#, fuzzy
 msgid "Only 5 properties can be compared. Please remove a property from list."
-msgstr "Por favor, elimine un alojamiento de la lista."
+msgstr ""
+"Solo se pueden comparar 5 alojamientos. Por favor, elimine un alojamiento de "
+"la lista."
 
 #: ../code/application/views/hw/hostel_view.php:3
 #: ../code/application/views/hb/hostel_view.php:2
@@ -7630,7 +7631,7 @@ msgstr "Vista Rápida"
 #: ../code/application/views/helpfile/pofields.php:695
 #, php-format
 msgid "%s has sent you a message: "
-msgstr "%s te ha enviado un mensaje"
+msgstr "%s te ha enviado un mensaje:"
 
 #: ../code/application/views/helpfile/pofields.php:697
 #, php-format
@@ -7706,7 +7707,7 @@ msgid "Bedroom"
 msgstr "Habitación"
 
 #: ../code/application/views/helpfile/pofields.php:710
-#, fuzzy, php-format
+#, php-format
 msgid "Bedrooms"
 msgstr "Habitaciones"
 
