--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-29 17:54+0200\n"
-"PO-Revision-Date: 2013-03-29 22:32+0200\n"
+"PO-Revision-Date: 2013-03-30 19:32+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -3784,18 +3784,18 @@ msgid "Selected filters:"
 msgstr "Filtros selecionados:"
 
 #: ../code/application/views/city_view.php:346
-#, fuzzy
 msgid "Please Wait"
-msgstr "Favor selecionar"
+msgstr "Por favor aguarde"
 
 #: ../code/application/views/city_view.php:351
 msgid "From"
 msgstr "De"
 
 #: ../code/application/views/city_view.php:352
-#, fuzzy
 msgid "Only 5 properties can be compared. Please remove a property from list."
-msgstr "Por favor remova uma propriedade da lista."
+msgstr ""
+"Apenas 5 características podem ser comparadas. Por favor remova uma "
+"propriedade da lista."
 
 #: ../code/application/views/hw/hostel_view.php:3
 #: ../code/application/views/hb/hostel_view.php:2
